--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ font-family: 'Lexend Deca', sans-serif; */
 }
 
 body {
+  line-height: 2; 
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -39,9 +40,9 @@ img {
 
 main {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   width: 100%;
-  max-width: 920px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -51,7 +52,7 @@ h2 {
   font-size: 2.5rem;
   text-transform: uppercase;
   margin-top: 1em;
-  margin-bottom: .5em;
+  margin-bottom: 1em;
 }
 
 p {
@@ -59,13 +60,14 @@ p {
   font-family: 'Lexend Deca', sans-serif;
   color: var(--transparent-white);
   margin-bottom: 6.7em;
+  line-height: 1.5;
 }
 
 button {
   font-family: 'Big Shoulders Display', sans-serif;
   border: none;
-  padding: .5em 2em;
-  border-radius: 100px;
+  padding: .6em 1em;
+  border-radius: 2em;
   font-weight: 700;
   font-size: 1.2rem;
   cursor: pointer;
