--- a/style.css
+++ b/style.css
@@ -22,19 +22,14 @@ font-family: 'Lexend Deca', sans-serif; */
 }
 
 body {
-  line-height: 2; 
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
+  display: grid;
+  place-content: center;
   background-color: var(--very-light-gray);
 }
 
 img {
   max-width: 100%;
-  height: auto;
   display: block;
 }
 
@@ -43,7 +38,6 @@ main {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   width: 100%;
   max-width: 1000px;
-  margin: 0 auto;
 }
 
 h2 {
@@ -126,21 +120,17 @@ button:hover {
   color: hsl(228, 45%, 44%); 
 }
 
-@media (width < 550px) {
+@media (width < 700px) {
   main {
     max-width: 350px;
   }
 
   .sedans {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 0;
-  border-top-right-radius: 10px;
+    border-radius: 10px 10px 0 0;
   }
 
   .luxury {
-    border-top-right-radius: 0;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+   border-radius: 0 0 10px 10px;
   }
 }
 
